# ironclaw

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  FEATURE_PARITY.md  providers.json
.githooks/: pre-push
.github/workflows/: staging-ci.yml
.kiro/: FEISHU_MANAGED_BY_HOST_FIX.md
benches/: tool_dispatch.rs
channels-src/feishu/: feishu.capabilities.json
channels-src/gmail/: Cargo.toml  README.md  build.sh  gmail.capabilities.json
channels-src/gmail/skills/gmail-summarize/: SKILL.md
channels-src/gmail/src/: lib.rs
crates/ironclaw_safety/: CHANGELOG.md
fuzz/: README.md
fuzz/fuzz_targets/: fuzz_config_env.rs  fuzz_leak_detector.rs  fuzz_safety_sanitizer.rs  fuzz_safety_validator.rs  fuzz_tool_params.rs
scripts/: check_no_panics.py
scripts/ci/: delta_lint.sh
skills/ironclaw-workflow-orchestrator/: SKILL.md
src/: app.rs  lib.rs  main.rs  settings.rs
src/agent/: agent_loop.rs  agentic_loop.rs  dispatcher.rs  routine.rs  routine_engine.rs  scheduler.rs  thread_ops.rs
src/channels/: repl.rs
src/channels/wasm/: router.rs  (+3 more)
src/config/: llm.rs  mod.rs
src/extensions/: manager.rs
src/history/: store.rs
src/llm/: basic_openai.rs  config.rs  mod.rs  reasoning.rs  registry.rs
src/setup/: README.md  mod.rs  wizard.rs
src/tools/: coercion.rs  execute.rs  registry.rs  schema_validator.rs
src/worker/: job.rs
src/workspace/: mod.rs
tests/: e2e_builtin_tool_coverage.rs  e2e_routine_heartbeat.rs  telegram_auth_integration.rs
tests/e2e/: conftest.py  mock_llm.py
tests/support/: test_rig.rs
tools-src/github/: github-tool.capabilities.json
(+25 files in other folders)
