[package]
name = "gmail-channel"
version = "0.1.0"
edition = "2021"
description = "Gmail push notification channel for IronClaw via Google Pub/Sub"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# WIT bindgen for WASM component model
wit-bindgen = "0.36"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Base64URL decoding for Pub/Sub payloads
base64 = "0.22"

[dev-dependencies]
# Property-based testing (test-only)
proptest = "1.4"

# Exclude from parent workspace (this is a standalone WASM component)

[profile.release]
# Optimize for size
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[workspace]
